# rosbox

./: .gitignore  MANIFEST.in  README.md  build_image.py  imageBuilder.py  pyproject.toml  requirements.txt  rosManger.py  rosbox.py  setup.py
.github/workflows/: docker-image.yml  main-build-push.yml  pr-build-test.yml
entrypoints_templates/: Dockerfile.it.template  Dockerfile.rosbox.template
ros_templates/: Dockerfile.ros-desktop.template
rosbox/: config.py  defaults.py  extensions.json  imageBuilder.py  rosbox.py
rosbox/base_templates/: Dockerfile.mini.jinja  Dockerfile.toolbox.jinja  Dockerfile.universal.jinja  Dockerfile.universaljazzy.jinja
rosbox/default_templates/: Dockerfile.desktop.template  Dockerfile.desktopjazzy.template  Dockerfile.robot-jetank.template  Dockerfile.robot-jetracer.template  Dockerfile.sim.template
rosbox/entrypoints_templates/: Dockerfile.rosbox.template  Dockerfile.rosboxjazzy.template
rosbox/ros_templates/: Dockerfile.ros-base.template  Dockerfile.ros-core.template  Dockerfile.ros-desktop-full.template  Dockerfile.ros-desktop.template  Dockerfile.ros-desktopjazzy.template  Dockerfile.ros-perception.template  Dockerfile.ros-simulation.template
